samples/_failures_safe/1761596374_9c2412_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_bc5b42e6.c: In function ‘print_token_type’:
./samples/SAFE/__tmp_bc5b42e6.c:167:14: error: ‘TO’ undeclared (first use in this function)
  167 |         case TO
      |              ^~
./samples/SAFE/__tmp_bc5b42e6.c:167:14: note: each undeclared identifier is reported only once for each function it appears in
./samples/SAFE/__tmp_bc5b42e6.c:167:9: error: expected ‘:’ or ‘...’ at end of input
  167 |         case TO
      |         ^~~~
./samples/SAFE/__tmp_bc5b42e6.c:167:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_bc5b42e6.c:167:9: error: expected declaration or statement at end of input
